# RayquaBot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  arm-build.sh
setup-arm/: Dockerfile.BuildX  arm-setup-tools.sh
src/: commands.rs  main.rs
src/command_reactor/: mod.rs
src/command_setup/: mod.rs
src/commands/: common_functions.rs  constants.rs  delete_edition.rs  edit_edition.rs  get_edition.rs  inscriptions.rs  mod.rs  new_edition.rs  ping.rs  setup_env_bot.rs
src/commands/Points/: constantes_points.rs
src/commands/edition/: delete_edition.rs  edit_edition.rs  get_edition.rs  lock_version.rs  mod.rs  new_edition.rs  print_edition_parameters.rs  version_setup.rs
src/commands/joueurs/: mod.rs  registration.rs  rejoin.rs  versions_player_setup.rs
src/lang/: EN.json  FR.json
src/modals/: mod.rs
src/mongo_functions/: mod.rs
