[package]
name = "RayquaBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.11.0", features = ["full"] }
mongodb = { version = "2.0.0", features = ["tokio-runtime"] }
json = "0.12.4"
lazy_static = "0.1.*"
once_cell = "1.14.0"

[dependencies.serenity]
version = "0.11.5"
features = ["voice", "model", "framework", "cache", "http", "rustls_backend", "native_tls_backend"]